Large batch of changes for pagination and component field editor.